v4 (27 September 2021):
    * Fix inaccurate timeout

v3 (25 September 2021):
    * Fix handling of valid passes

v2 (23 September 2021):
    * Fix out of bounds checking crash

v1 (14 September 2021):
    * Initial version