@@ -1,3 +1,7 @@
+v5 (29 September 2021):
+    * Add color toggle (--no_color)
+    * Fix deep-copying of Board class
+
 v4 (27 September 2021):
     * Fix inaccurate timeout
 
